--- a/PyKBC(2023)/index.html
+++ b/PyKBC(2023)/index.html
@@ -12,7 +12,7 @@
         </p>
         <table>
             <tr class="question">
-                Q1|O1|O2|O3|O4|3
+                To access the services of the operating system, the interface is provided by the|Library|System calls|Assembly instructions|API|System calls
             </tr>
             <br>
             <tr class="question">
