--- a/PyKBC(2023)/index.html
+++ b/PyKBC(2023)/index.html
@@ -16,7 +16,7 @@
             </tr>
             <br>
             <tr class="question">
-                Q1|O1|O2|O3|O4|3
+                Transient operating system code is a code that|stays in the memory always|never enters the memory space|comes and goes as needed|is not easily accessible|comes and goes as needed
             </tr>
         </table>
     </div>
@@ -26,11 +26,11 @@
         </p>
         <table>
             <tr class="question">
-                Q1|O1|O2|O3|O4|3
+                Q1|O1|O2|O3|O4|O3
             </tr>
             <br>
             <tr class="question">
-                Q1|O1|O2|O3|O4|3
+                Q1|O1|O2|O3|O4|O3
             </tr>
         </table>
     </div>
