--- a/PyKBC(2023)/index.html
+++ b/PyKBC(2023)/index.html
@@ -26,7 +26,7 @@
         </p>
         <table>
             <tr class="question">
-                Q1|O1|O2|O3|O4|O3
+                Which is the only active Volcano of India?|YellowStone SuperVolcano|Mt. Fujiyama|Barren Island|Narcondam Island|Barren Island
             </tr>
             <br>
             <tr class="question">
