--- a/PyKBC(2023)/index.html
+++ b/PyKBC(2023)/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="topic">
         <p class="tname">
-            Computer Science
+            BollyWood
         </p>
         <table>
             <tr class="question"><td>
@@ -87,7 +87,7 @@
     </div>
     <div class="topic">
         <p class="tname">
-            Computer Science
+            Space
         </p>
         <table>
             <tr class="question"><td>
@@ -120,7 +120,7 @@
     </div>
     <div class="topic">
         <p class="tname">
-            Computer Science
+            Geography
         </p>
         <table>
             <tr class="question"><td>
@@ -153,7 +153,7 @@
     </div>
     <div class="topic">
         <p class="tname">
-            Computer Science
+            Mythology
         </p>
         <table>
             <tr class="question"><td>
@@ -186,7 +186,7 @@
     </div>
     <div class="topic">
         <p class="tname">
-            Computer Science
+            History
         </p>
         <table>
             <tr class="question"><td>
@@ -219,7 +219,7 @@
     </div>
     <div class="topic">
         <p class="tname">
-            Computer Science
+            Technology
         </p>
         <table>
             <tr class="question"><td>
@@ -252,7 +252,7 @@
     </div>
     <div class="topic">
         <p class="tname">
-            Computer Science
+            Genre1
         </p>
         <table>
             <tr class="question"><td>
@@ -285,7 +285,7 @@
     </div>
     <div class="topic">
         <p class="tname">
-            Computer Science
+            Genre2
         </p>
         <table>
             <tr class="question"><td>
@@ -318,7 +318,7 @@
     </div>
     <div class="topic">
         <p class="tname">
-            Computer Science
+            Genre3
         </p>
         <table>
             <tr class="question"><td>
@@ -351,7 +351,7 @@
     </div>
     <div class="topic">
         <p class="tname">
-            Computer Science
+            Genre4
         </p>
         <table>
             <tr class="question"><td>
@@ -384,7 +384,7 @@
     </div>
     <div class="topic">
         <p class="tname">
-            Computer Science
+            Genre5
         </p>
         <table>
             <tr class="question"><td>
@@ -417,7 +417,7 @@
     </div>
     <div class="topic">
         <p class="tname">
-            Computer Science
+            Genre6
         </p>
         <table>
             <tr class="question"><td>
@@ -450,7 +450,7 @@
     </div>
     <div class="topic">
         <p class="tname">
-            Computer Science
+            Genre7
         </p>
         <table>
             <tr class="question"><td>
