--- a/scholy/frame.html
+++ b/scholy/frame.html
@@ -12,7 +12,7 @@
     }
     .container {
       max-width: 600px;
-      margin: 0 auto;
+      margin: 0 0;
       text-align: center;
     }
     .profile-image {
