--- a/scholy/frame.html
+++ b/scholy/frame.html
@@ -43,7 +43,7 @@
       overflow: hidden;
     }
     th {
-      background-color: #007BFF; /* Color for the heading row */
+      background-color: #6600b4; /* Color for the heading row */
       color: white;
       padding: 10px;
       text-align: center;
@@ -70,14 +70,14 @@
       display: none;
       margin-top: 1em;
       padding: 10px 20px;
-      background-color: #007BFF;
+      background-color: #6600b4;
       color: white;
       border: none;
       cursor: pointer;
       border-radius: 5px;
     }
     #retryBtn:hover {
-      background-color: #0056b3;
+      background-color: #7711c5;
     }
   </style>
 </head>
@@ -181,7 +181,7 @@
           datasets: [{
             label: "Citations",
             data: citations,
-            backgroundColor: "rgba(0, 123, 255, 0.2)",
+            backgroundColor: "rgba(102, 0, 180, 0.2)",
             borderColor: "rgba(0, 123, 255, 1)",
             borderWidth: 1
           }]
