--- a/scholy/table_frame.html
+++ b/scholy/table_frame.html
@@ -86,6 +86,7 @@
     <div id="loading">Fetching Data From Google Scholar...</div>
     
     <div class="stats">
+      <h2>Research Citations (Google Scholar)</h2>
       <table>
         <thead>
           <tr>
