--- a/scholy/table_frame.html
+++ b/scholy/table_frame.html
@@ -59,8 +59,11 @@
     tr:hover {
       background-color: #f1f1f1;
     }
-    h1, h2 {
+    h1{
       color: #343a40;
+    }
+    h2{
+      color: #ff0000;
     }
     #loading {
       margin-top: 1em;
